--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="js/jquery.mobile-1.3.1.min.js"></script>
     <script src="js/cursor.js"></script>
     <script src="js/timepicker.js"></script>
+    <script src="js/timeline.js"></script>
     <script src="js/woodpecker.js"></script>
   </head>
   <body>
@@ -30,7 +31,7 @@
 	<div id="add-check-out" class="punch span5">Add check out</div>
       </div>
     </div>
-    <table id="history"></table>
+    <table id="timeline"></table>
     <div id="time-picker" class="popup"></div>
   </body>
 </html>
