--- a/index.html
+++ b/index.html
@@ -5,33 +5,88 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/jquery.mobile-1.3.1.min.css" rel="stylesheet" media="screen">
     <link href="css/cursor.css" rel="stylesheet" media="screen">
     <link href="css/timepicker.css" rel="stylesheet" media="screen">
     <link href="css/woodpecker.css" rel="stylesheet" media="screen">
     <script src="js/sprintf.js"></script>
-    <!-- <script src="js/zepto.js"></script> -->
-    <!-- <script src="js/ajax.js"></script> -->
-    <!-- <script src="js/touch.js"></script> -->
     <script src="js/jquery-2.0.0.js"></script>
-    <script src="js/jquery.mobile-1.3.1.min.js"></script>
+    <script src="js/handlebars.js"></script>
+    <script src="js/ember-1.0.0-rc.3.js"></script>
     <script src="js/cursor.js"></script>
     <script src="js/timepicker.js"></script>
     <script src="js/timeline.js"></script>
     <script src="js/woodpecker.js"></script>
   </head>
   <body>
-    <div id="punch-box">
-      <div class="row-fluid">
-	<div id="check-in" class="punch span5 offset1">Check in</div>
-	<div id="check-out" class="punch span5">Check out</div>
+    <script type="text/x-handlebars">
+      <h3>Hello, {{world}}</h3>
+      {{view Woodpecker.puncher.view}}
+      {{view Woodpecker.TimelineView}}
+      {{view Woodpecker.timepicker.view}}
+    </script>
+    <script type="text/x-handlebars" data-template-name="puncher">
+      <div id="punch-box">
+	<div class="row-fluid">
+	  {{#each Woodpecker.puncher.buttons}}
+	  {{view Woodpecker.puncher.ButtonView}}
+	  {{/each}}
+	</div>
       </div>
-      <div class="row-fluid">
-	<div id="add-check-in" class="punch span5 offset1">Add check in</div>
-	<div id="add-check-out" class="punch span5">Add check out</div>
+    </script>
+    <script type="text/x-handlebars" data-template-name="button">
+      <div class="punch span5 offset1" {{action hit on="click"}} {{action hit on="touchStart"}}>
+	{{text}}
       </div>
-    </div>
-    <table id="timeline"></table>
-    <div id="time-picker" class="popup"></div>
+    </script>
+    <script type="text/x-handlebars" data-template-name="timepicker-cursor">
+      <div {{bindAttr class="fixed:cursor-fixed:cursor-variable current:cursor-current"}} {{action hit on="click"}} {{action hit on="touchStart"}}>
+	{{value}}
+      </div>
+    </script>
+    <script type="text/x-handlebars" data-template-name="timepicker-button">
+      <div class="timepicker-button" {{action hit on="click"}} {{action hit on="touchStart"}}>
+	{{text}}
+      </div>
+    </script>
+    <script type="text/x-handlebars" data-template-name="timepicker">
+      <div class="popup-1">
+	<div class="clearfix">
+	  {{#each Woodpecker.timepicker.cursors}}
+	  {{view Woodpecker.timepicker.CursorView}}
+	  {{/each}}
+	</div>
+	<div>
+	  {{#each Woodpecker.timepicker.numpad_buttons}}
+	  {{view Woodpecker.timepicker.NumpadButtonView}}
+	  {{/each}}
+	</div>
+	<div>
+	  {{#each Woodpecker.timepicker.control_buttons}}
+	  {{view Woodpecker.timepicker.ControlButtonView}}
+	  {{/each}}
+	</div>
+      </div>
+    </script>
+    <script type="text/x-handlebars" data-template-name="timeline">
+      <table id="timeline">
+	<tbody>
+	  {{#each Woodpecker.TimelineController}}
+	  <tr>
+	    <td>{{start}}</td>
+	    <td>{{end}}</td>
+	  </tr>
+	  {{/each}}
+	</tbody>
+      </table>
+    </script>
+    <div id="log"></div>
+    <script type="text/x-handlebars" data-template-name="popup">
+      <div class="popup popup-1">
+	<button class="popup-dismiss">x</button>
+	<div class="popup-content">
+	  {{yield}}
+	</div>
+      </div>
+    </script>
   </body>
 </html>
