--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="js/cursor.js"></script>
     <script src="js/timepicker.js"></script>
     <script src="js/timeline.js"></script>
+    <script src="js/locache.min.js"></script>
     <script src="js/asana.js"></script>
     <script src="js/woodpecker.js"></script>
   </head>
@@ -34,7 +35,7 @@
 	  {{view Woodpecker.Selector.OptionView}}
 	  {{/each}}
 	</div>
-	<div>
+	<div class="row-fluid">
 	  {{#each Woodpecker.selector.control_buttons}}
 	  {{view Woodpecker.Selector.ControlButtonView}}
 	  {{/each}}
