fix sync comment to asana

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div {{action edit on="click"}} {{action edit on="touchStart"}}>
 	<i class="icon-edit"></i>
 	{{#if content}}
-	{{content}}
+	{{text}}
 	{{else}}
 	Empty
 	{{/if}}
