add selector load button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <script src="/static/js/jquery-2.0.0.js"></script>
     <script src="/static/js/handlebars.js"></script>
     <script src="/static/js/ember-1.0.0-rc.3.js"></script>
-    <script src="/static/js/ember-data-latest.js"></script>
     <script src="/static/js/rsvp.js"></script>
     <script src="/static/js/cursor.js"></script>
     <script src="/static/js/timepicker.js"></script>
@@ -146,7 +145,7 @@
   </head>
   <body>
     <script type="text/x-handlebars">
-      <h3>Hello, {{world}}</h3>
+      <h3>Time Recording</h3>
       {{view Woodpecker.puncher.view}}
       {{view Woodpecker.timeline.view}}
       {{view Woodpecker.timepicker.view}}
