--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="/static/css/woodpecker.css" rel="stylesheet" media="screen">
     <script src="/static/js/sprintf.js"></script>
     <script src="/static/js/jquery-2.0.0.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
     <script src="/static/js/handlebars.js"></script>
     <script src="/static/js/ember-1.0.0-rc.3.js"></script>
     <script src="/static/js/rsvp.js"></script>
@@ -20,17 +21,15 @@
     <script src="/static/js/asana.js"></script>
     <script src="/static/js/woodpecker.js"></script>
     <script type="text/x-handlebars" data-template-name="selector">
-      <div class="popup-1">
-	<div>
-	  {{#each Woodpecker.selector}}
-	  {{view Woodpecker.Selector.OptionView}}
-	  {{/each}}
-	</div>
-	<div class="row-fluid">
-	  {{#each Woodpecker.selector.control_buttons}}
-	  {{view Woodpecker.Selector.ControlButtonView}}
-	  {{/each}}
-	</div>
+      <div>
+	{{#each Woodpecker.selector}}
+	{{view Woodpecker.Selector.OptionView}}
+	{{/each}}
+      </div>
+      <div class="row-fluid">
+	{{#each Woodpecker.selector.control_buttons}}
+	{{view Woodpecker.Selector.ControlButtonView}}
+	{{/each}}
       </div>
     </script>
     <script type="text/x-handlebars" data-template-name="selector-option">
@@ -59,23 +58,21 @@
       </div>
     </script>
     <script type="text/x-handlebars" data-template-name="timepicker">
-      <div class="popup-1">
-	<div class="clearfix">
-	  {{#each Woodpecker.timepicker.cursors}}
-	  {{view Woodpecker.Timepicker.CursorView}}
+      <div class="clearfix">
+	{{#each Woodpecker.timepicker.cursors}}
+	{{view Woodpecker.Timepicker.CursorView}}
+	{{/each}}
+      </div>
+      <div class="timepicker-numpad">
+	{{#each Woodpecker.timepicker.numpad_buttons}}
+	{{view Woodpecker.Timepicker.NumpadButtonView}}
+	{{/each}}
+      </div>
+      <div>
+	<div class="row-fluid">
+	  {{#each Woodpecker.timepicker.control_buttons}}
+	  {{view Woodpecker.Timepicker.ControlButtonView}}
 	  {{/each}}
-	</div>
-	<div class="timepicker-numpad">
-	  {{#each Woodpecker.timepicker.numpad_buttons}}
-	  {{view Woodpecker.Timepicker.NumpadButtonView}}
-	  {{/each}}
-	</div>
-	<div>
-	  <div class="row-fluid">
-	    {{#each Woodpecker.timepicker.control_buttons}}
-	    {{view Woodpecker.Timepicker.ControlButtonView}}
-	    {{/each}}
-	  </div>
 	</div>
       </div>
     </script>
@@ -127,23 +124,13 @@
     <script type="text/x-handlebars" data-template-name="comment">
     </script>
     <script type="text/x-handlebars" data-template-name="comment-editor">
-      <div class="popup-1">
-	<h4>{{Woodpecker.comment_editor.target.task.name}}</h4>
-	{{view Ember.TextArea valueBinding="Woodpecker.comment_editor.content"}}
-	<div>
-	  <div class="row-fluid">
-	    {{#each Woodpecker.comment_editor.control_buttons}}
-	    {{view Woodpecker.CommentEditor.ControlButtonView}}
-	    {{/each}}
-	  </div>
-	</div>
-      </div>
-    </script>
-    <script type="text/x-handlebars" data-template-name="popup">
-      <div class="popup popup-1">
-	<button class="popup-dismiss">x</button>
-	<div class="popup-content">
-	  {{yield}}
+      <h4>{{Woodpecker.comment_editor.target.task.name}}</h4>
+      {{view Ember.TextArea valueBinding="Woodpecker.comment_editor.content"}}
+      <div>
+	<div class="row-fluid">
+	  {{#each Woodpecker.comment_editor.control_buttons}}
+	  {{view Woodpecker.CommentEditor.ControlButtonView}}
+	  {{/each}}
 	</div>
       </div>
     </script>
