add flush date button

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </head>
   <body>
     <script type="text/x-handlebars">
-      <h3>Time Recording</h3>
+      <h3>Time Recording: {{Woodpecker.timeline.date}}</h3>
       {{view Woodpecker.puncher.view}}
       {{view Woodpecker.timeline.view}}
       {{view Woodpecker.timepicker.view}}
