add offline cache and use gunicorn as WSGI server

--- a/src/woodpecker/index.html
+++ b/src/woodpecker/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="/static/woodpecker.manifest">
   <head>
     <title>Woodpecker</title>
     <meta charset="utf-8">
