--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html manifest="/static/woodpecker.manifest">
+<html manifest="/woodpecker.manifest">
   <head>
     <title>Woodpecker</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/cursor.css" rel="stylesheet" media="screen">
-    <link href="/static/css/timepicker.css" rel="stylesheet" media="screen">
-    <link href="/static/css/woodpecker.css" rel="stylesheet" media="screen">
-    <script src="/static/js/sprintf.js"></script>
-    <script src="/static/js/jquery-2.0.0.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
-    <script src="/static/js/handlebars.js"></script>
-    <script src="/static/js/ember-1.0.0-rc.3.js"></script>
-    <script src="/static/js/rsvp.js"></script>
-    <script src="/static/js/cursor.js"></script>
-    <script src="/static/js/timepicker.js"></script>
-    <script src="/static/js/timeline.js"></script>
-    <script src="/static/js/locache.min.js"></script>
-    <script src="/static/js/asana.js"></script>
-    <script src="/static/js/logging.js"></script>
-    <script src="/static/js/woodpecker.js"></script>
+    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/css/cursor.css" rel="stylesheet" media="screen">
+    <link href="/css/timepicker.css" rel="stylesheet" media="screen">
+    <link href="/css/woodpecker.css" rel="stylesheet" media="screen">
+    <script src="/js/sprintf.js"></script>
+    <script src="/js/jquery-2.0.0.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/handlebars.js"></script>
+    <script src="/js/ember-1.0.0-rc.3.js"></script>
+    <script src="/js/rsvp.js"></script>
+    <script src="/js/cursor.js"></script>
+    <script src="/js/timepicker.js"></script>
+    <script src="/js/timeline.js"></script>
+    <script src="/js/locache.min.js"></script>
+    <script src="/js/asana.js"></script>
+    <script src="/js/logging.js"></script>
+    <script src="/js/woodpecker.js"></script>
     <script type="text/x-handlebars" data-template-name="selector">
       <div>
 	{{#each Woodpecker.selector}}
@@ -34,7 +34,9 @@
       </div>
     </script>
     <script type="text/x-handlebars" data-template-name="selector-option">
-      <div {{bindAttr class=":option marked:marked"}} {{action toggle on="click"}} {{action toggle on="touchStart"}}>{{name}}</div>
+      <div {{bindAttr class=":option marked:marked"}} {{action toggle on="click"}} {{action toggle on="touchStart"}}>
+	{{name}}
+      </div>
     </script>
     <script type="text/x-handlebars" data-template-name="puncher">
       {{#each Woodpecker.puncher.buttons}}
