--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -82,7 +82,8 @@
 	<thead>
 	  <td class="span1">In</td>
 	  <td class="span1">Out</td>
-	  <td class="span5">Tasks</td>
+	  <td class="span1">Use</td>
+	  <td class="span4">Tasks</td>
 	  <td class="span5">Comments</td>
 	</thead>
 	<tbody>
@@ -102,6 +103,7 @@
 	    {{action set_end on="touchStart"}}>
 	  {{end_short}}
 	</td>
+	<td>{{use_time}}</td>
 	<td {{action select_tasks on="click"}} {{action select_tasks on="touchStart"}}>
 	  {{#each task in tasks}}
 	  <div><i class="icon-calendar"></i>{{task.name}}</div>
