show loading icon at top-right corner when loading data

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -106,6 +106,7 @@
   </head>
   <body>
     <script type="text/x-handlebars">
+      {{view Woodpecker.loader.view}}
       {{view Woodpecker.date.view}}
       {{view Woodpecker.network.view}}
       {{#view Ember.View controllerBinding=Woodpecker.menu}}
