add persistent module and cache records

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -24,6 +24,7 @@
     <script src="/js/locache.min.js"></script>
     <script src="/js/asana.js"></script>
     <script src="/js/logging.js"></script>
+    <script src="/js/persistent.js"></script>
     <script src="/js/woodpecker.js"></script>
     <script src="/js/statistics.js"></script>
     <script type="text/x-handlebars" data-template-name="tag-selector">
