improve performance by indexing

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -27,6 +27,8 @@
     <script src="/js/persistent.js"></script>
     <script src="/js/woodpecker.js"></script>
     <script src="/js/statistics.js"></script>
+    <script src="/js/index.js"></script>
+    <script src="/js/lock.js"></script>
     <script type="text/x-handlebars" data-template-name="tag-selector">
       <div>
 	{{#each Woodpecker.tag_selector}}
