update to latest version of stacktrace.js

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,7 +10,7 @@
     <link href="/css/woodpecker.css" rel="stylesheet" media="screen">
     <link href="/css/statistics.css" rel="stylesheet" media="screen">
     <script src="/js/sprintf.js"></script>
-    <script src="/js/stacktrace-0.4.js"></script>
+    <script src="/js/stacktrace.js"></script>
     <script src="/js/jquery-2.0.0.js"></script>
     <script src="/js/bootstrap.js"></script>
     <script src="/js/handlebars-1.0.0-rc.4.js"></script>
