--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -18,6 +18,14 @@
     <script src="/js/ember-data-0.13.js"></script>
     <script src="/js/ember-touch.js"></script>
     <script src="/js/rsvp.js"></script>
+    <script>
+    window.define = function(factory) {
+        try{ delete window.define; } catch(e){ window.define = void 0; } // IE
+        window.when = factory();
+    };
+    window.define.amd = {};
+    </script>
+    <script src="/js/when.js"></script>
     <script src="/js/d3.v3.min.js"></script>
     <script src="/js/cursor.js"></script>
     <script src="/js/timepicker.js"></script>
