--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <title>Woodpecker</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
-    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/css/cursor.css" rel="stylesheet" media="screen">
-    <link href="/css/timepicker.css" rel="stylesheet" media="screen">
-    <link href="/css/woodpecker.css" rel="stylesheet" media="screen">
-    <link href="/css/statistics.css" rel="stylesheet" media="screen">
-    <script src="/js/sprintf.js"></script>
-    <script src="/js/stacktrace.js"></script>
-    <script src="/js/jquery-2.0.0.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/handlebars-1.0.0-rc.4.js"></script>
-    <script src="/js/ember-1.0.0-rc.5.js"></script>
-    <script src="/js/ember-data-0.13.js"></script>
-    <script src="/js/ember-touch.js"></script>
-    <script src="/js/rsvp.js"></script>
+    <link href="/woodpecker/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/woodpecker/css/cursor.css" rel="stylesheet" media="screen">
+    <link href="/woodpecker/css/timepicker.css" rel="stylesheet" media="screen">
+    <link href="/woodpecker/css/woodpecker.css" rel="stylesheet" media="screen">
+    <link href="/woodpecker/css/statistics.css" rel="stylesheet" media="screen">
+    <script src="/woodpecker/js/sprintf.js"></script>
+    <script src="/woodpecker/js/stacktrace.js"></script>
+    <script src="/woodpecker/js/jquery-2.0.0.js"></script>
+    <script src="/woodpecker/js/bootstrap.js"></script>
+    <script src="/woodpecker/js/handlebars-1.0.0-rc.4.js"></script>
+    <script src="/woodpecker/js/ember-1.0.0-rc.5.js"></script>
+    <script src="/woodpecker/js/ember-data-0.13.js"></script>
+    <script src="/woodpecker/js/ember-touch.js"></script>
+    <script src="/woodpecker/js/rsvp.js"></script>
     <script>
     window.define = function(factory) {
         try{ delete window.define; } catch(e){ window.define = void 0; } // IE
@@ -26,19 +26,19 @@
     window.define.amd = {};
     </script>
 
-    <script src="/js/when.js"></script>
-    <script src="/js/d3.v3.min.js"></script>
-    <script src="/js/cursor.js"></script>
-    <script src="/js/timepicker.js"></script>
-    <script src="/js/timeline.js"></script>
-    <script src="/js/locache.min.js"></script>
-    <script src="/js/asana.js"></script>
-    <script src="/js/logging.js"></script>
-    <script src="/js/persistent.js"></script>
-    <script src="/js/woodpecker.js"></script>
-    <script src="/js/statistics.js"></script>
-    <script src="/js/index.js"></script>
-    <script src="/js/lock.js"></script>
+    <script src="/woodpecker/js/when.js"></script>
+    <script src="/woodpecker/js/d3.v3.min.js"></script>
+    <script src="/woodpecker/js/cursor.js"></script>
+    <script src="/woodpecker/js/timepicker.js"></script>
+    <script src="/woodpecker/js/timeline.js"></script>
+    <script src="/woodpecker/js/locache.min.js"></script>
+    <script src="/woodpecker/js/asana.js"></script>
+    <script src="/woodpecker/js/logging.js"></script>
+    <script src="/woodpecker/js/persistent.js"></script>
+    <script src="/woodpecker/js/woodpecker.js"></script>
+    <script src="/woodpecker/js/statistics.js"></script>
+    <script src="/woodpecker/js/index.js"></script>
+    <script src="/woodpecker/js/lock.js"></script>
     <script type="text/x-handlebars" data-template-name="tag-selector">
       <div>
 	{{#each Woodpecker.tag_selector}}
