--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="/woodpecker.manifest">
+<html manifest="/woodpecker/woodpecker.manifest">
   <head>
     <title>Woodpecker</title>
     <meta charset="utf-8">
